--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: colored_lumberdash
 description: >
   Lumberdash plugin that pretty prints your logs on all 3 major
   platforms.
-version: 0.9.0
+version: 1.0.0-alpha
 author: daniel-v <dvargahali@gmail.com>
 homepage: https://github.com/daniel-v/colored_lumberdash
 
